# exp-scheduler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 文件同步与多终端使用指南.md
frontend/src/: App.tsx
src/exp_scheduler_app/: backup.py  cli.py  conda_inventory.py  config.py  database.py  file_browser.py  gpu.py  interactive_terminal.py  nodes.py  scheduler.py  tmux_utils.py  transfer.py  web.py
src/exp_scheduler_app/static/: index.html
src/exp_scheduler_app/static/assets/: index-0Y9LgNmS.js  index-BVvcKqiV.js  index-Dj98Y6OA.css  index-zYwLPPTg.css
tests/: test_backup.py  test_interactive_terminal.py  test_nodes.py  test_routing.py  test_scheduler.py  test_transfers.py
