[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exp-scheduler"
version = "0.1.0"
description = "GPU experiment task scheduler with a FastAPI backend and React frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
]

[project.scripts]
exp-scheduler = "exp_scheduler_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exp_scheduler_app = [
  "static/*",
  "static/assets/*",
  "static/vendor/xterm/*",
]
